--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += 'src/main/java'
     }
     defaultConfig {
         minSdkVersion 16
@@ -38,6 +39,19 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dir 'aars'
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation 'androidx.core:core:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation(name:"VisioMoveEssential", ext:"aar")
 }
