--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -58,6 +58,7 @@ flutter {
     source '../..'
 }
 
+//TODO add VisioMoveEssential.aar in folder example/android/app/aars
 repositories {
     flatDir {
         dir 'aars'
