--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'http://multirepo-oab.si.fr.intraorange/maven-thirdparty' }
     }
 
     dependencies {
@@ -32,17 +33,10 @@ android {
         main.java.srcDirs += 'src/main/java'
     }
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
     }
     lintOptions {
         disable 'InvalidPackage'
-    }
-}
-
-//TODO add VisioMoveEssential.aar in folder android/aars
-repositories {
-    flatDir {
-        dir 'aars'
     }
 }
 
@@ -54,5 +48,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation(name:"VisioMoveEssential", ext:"aar")
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.visioglobe:visiomove-essential:1.26.1@aar"
 }
