--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.exemple.test_bug_visio">
+  package="com.orange.obs.plugins.myplace_svc_mapview">
 </manifest>
