--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,25 +11,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^4.3.2+2
+  freezed_annotation: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^0.12.2
+  build_runner: ^1.8.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
-        package: com.exemple.test_bug_visio
-        pluginClass: TestBugVisioPlugin
-      ios:
-        pluginClass: TestBugVisioPlugin
+        package: com.orange.obs.plugins.myplace_svc_mapview
+        pluginClass: MapViewPlugin
+
 
