--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,12 +6,12 @@ description: Demonstrates how to use the test_bug_visio plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
+  provider: ^5.0.0
 
   test_bug_visio:
     path: ../
