--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,21 +5,22 @@ author:
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  freezed_annotation: ^0.12.0
+  provider: ^5.0.0
+  freezed_annotation: ^0.14.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  freezed: ^0.12.2
-  build_runner: ^1.8.0
-  json_serializable: ^3.3.0
+  freezed: ^0.14.1
+  build_runner: ^2.0.0
+  json_serializable: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
